<resources>
    <string name="app_name">beginvegan</string>
    <string name="app_name_kr">비긴, 비건</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_string">empty</string>
    <string name="empty_int">0</string>
    <string name="empty_float">0.0</string>
    <string name="vegan_test_description_before">비거너로 향한 여정에 오신 \n 비기너 여러분 환영합니다!
        \n 저희 여정에 있어 “비긴, 비건”은 \n 비건이 단순한 ‘채식주의자’가 아닌,
        자신의 성향에 맞는 비건 단계를 \n 안내하는 것으로 목표하고 있습니다.
        \n 여정을 떠날 준비가 되셨나요?
        \n 준비가 되셨다면 \n ‘시작하기’ 버튼을 눌러주세요!
    </string>
    <string name="btn_vegan_test_next">다음에 할게요</string>
    <string name="btn_vegan_test_start">테스트 시작하기</string>
    <string name="btn_vegan_test_again">다시하기</string>
    <string name="btn_go_home">여정 시작하기</string>
    <string name="btn_edit">수정하기</string>
    <string name="test_question_meat">1. 친구가 취뽀해서 소고기(혹은 돼지고기)를\n사준다고 한다.\n나는?</string>
    <string name="test_question_chicken">2. 오늘은 축구 결승전!\n나는?</string>
    <string name="test_question_fish">3. 하루종일 굶은 나, 식당이 열린 곳은 단 하나!\n메뉴가 생선구이밖에 있지 않다.\n나는?</string>
    <string name="test_question_egg">4. 계란찜이 서비스로 나왔다!\n나는?</string>
    <string name="test_question_milk">5. 마트에 왔다!\n식물성 우유는 기본 우유보다\n가격이 더 나간다.\n나는?</string>
    <string name="test_answer_meat_a">너무 좋지!!</string>
    <string name="test_answer_meat_b">다른 메뉴로 안될까?</string>
    <string name="test_answer_chicken_a">축구에는 치킨이지!</string>
    <string name="test_answer_chicken_b">치킨말고 다른 메뉴를 찾아볼래</string>
    <string name="test_answer_fish_a">생선구이 하나 주세요!</string>
    <string name="test_answer_fish_b">다른 곳을 찾으러 나간다.</string>
    <string name="test_answer_egg_a">우와 감사합니다!</string>
    <string name="test_answer_egg_b">감사합니다! (사실 안 먹는데 ㅠㅠ)</string>
    <string name="test_answer_milk_a">그냥 우유로 구매할래!</string>
    <string name="test_answer_milk_b">무조건 식물성 우유!</string>
    <string name="test_result_vegan">
        순수 채식주의자를 뜻하며, 어떠한 종류의 육류도 섭취하지 않는다
        \n\n육류와 생선은 물론이고 달걀, 유제품, 벌꿀 또는 젤라틴과 같은 동물 유래 성분을 포함한 가공식품도 섭취하지 않는다
    </string>
    <string name="test_result_lacto">
    Lacto는 우유를 뜻하는 라틴어로부터 유래한 것으로,
    우유와 같은 유제품은 섭취하되 다른 동물 제품(붉은 육류, 흰 육류, 생선, 조류 또는 달걀)을 전혀 섭취하지 않는다
    \n\n비건의 허용품목에서 유제품(치즈, 우유, 요거트 등)만 더하면 락토가 된다
    </string>
    <string name="test_result_lacto_ovo">
        유제품과 달걀을 모두 섭취하는 채식주의자로, 가장 일반적으로 알려진 채식주의자이다
        \n\n붉은 육류, 흰육류, 생선 또는 조류를 섭취하지 않으며 즉, 육류만 거부한다
    </string>
    <string name="test_result_pescatarian">
        "semi-vegetarian"또는 "flexitarian" 식단으로 간주하며, 기술적으로 채식주의자의 유형은 아니지만, 생선 및 해산물의 섭취를 허용한다
        \n\n즉, 육류, 가금류를 제외한 모든 식품을 섭취한다
        \n\n비건(vegan)의 허용 품목에서 우유, 계란 등의 알류, 어류와 해산물을 더하면 페스코가 된다
    </string>
    <string name="test_result_pollotarian">
        "semi-vegetarian" 식단으로, 동물 가운데 가금류(닭이나 오리 등)만 허용한 채식주의이다
        \n\n붉은 육류 또는 생선과 해산물을 섭취하지 않는다
    </string>
    <string name="test_result_flexitarian">
        기본적으로 채식을 하며,\n허용된 기준 안에서만 육류 제품을 섭취하기도 한다
    </string>
    <string name="recipe_filter_all">전체보기</string>
    <string name="recipe_filter_vegan_kr">비건</string>
    <string name="recipe_filter_lacto_kr">락토</string>
    <string name="recipe_filter_lacto_ovo_kr">락토-오보</string>
    <string name="recipe_filter_pescatarian_kr">페스코테리언</string>
    <string name="recipe_filter_pollo_kr">폴로</string>
    <string name="recipe_filter_flexitarian_kr">플렉시테리언</string>
    <string name="recipe_filter_vegan_en">VEGAN</string>
    <string name="recipe_filter_lacto_en">LACTO_VEGETARIAN</string>
    <string name="recipe_filter_lacto_ovo_en">LACTO_OVO_VEGETARIAN-오보</string>
    <string name="recipe_filter_pescatarian_en">PASCATARIAN</string>
    <string name="recipe_filter_pollo_en">POLLOTARIAN</string>
    <string name="recipe_filter_flexitarian_en">FLEXITARIAN</string>
    <string name="vegan_type_vegan_kr">비건</string>
    <string name="vegan_type_lacto_kr">락토 베지테리언</string>
    <string name="vegan_type_lacto_ovo_kr">락토-오보 베지테리언</string>
    <string name="vegan_type_pescatarian_kr">페스코테리언</string>
    <string name="vegan_type_pollotarian_kr">폴로테리언</string>
    <string name="vegan_type_flexitarian_kr">플렉시테리언</string>
    <string name="vegan_type_beginner_kr">비기너</string>
    <string name="vegan_type_vegan_eng">Vegan</string>
    <string name="vegan_type_lacto_eng">Lacto-vegetarian</string>
    <string name="vegan_type_lacto_ovo_eng">Lacto-ovo-vegetarian</string>
    <string name="vegan_type_pescatarian_eng">Pescatarian</string>
    <string name="vegan_type_pollotarian_eng">Pollotarian</string>
    <string name="vegan_type_flexitarian_eng">Flexitarian</string>
    <string name="home_slogan_veganner">비거너</string>
    <string name="home_slogan_description">의 여정으로 함께 떠나봐요</string>
    <string name="home_semi_title">주변 식당에서 비건 여정을 시작해 보세요</string>
    <string name="home_today_recipe">오늘의 추천 레시피 \uD83E\uDD57</string>
    <string name="home_vegan_magazine">비건 매거진 \uD83D\uDCE8</string>
    <string name="home_magazine_title_define">비건 = 채식주의자?\nNOPE</string>
    <string name="home_magazine_title_types">비건 종류가 7가지인 사실에\n놀라움을 감출 수 없었다</string>
    <string name="magazine_detail_title_define">비건 = 채식주의자\n1가지만 아니란 말이다!</string>
    <string name="magazine_editor">By 에디터 로이드, 안</string>
    <string name="profile_go_vegan_test">테스트 바로가기</string>
    <string name="profile_my_review">나의 리뷰</string>
    <string name="profile_my_scrap">나의 스크랩</string>
    <string name="logout_title">로그아웃 하시겠어요?</string>
    <string name="logout_description">비거너로서의 여정을 멈추실 건가요?\n저희 함께해요!</string>
    <string-array name="vegan_type_array">
        <item>비건</item>
        <item>락토 베지테리언</item>
        <item>오보 베지테리언</item>
        <item>락토-오보 베지테리언</item>
        <item>플로테리언</item>
        <item>페스트코테리언</item>
        <item>플렉시테리언</item>
    </string-array>
    <string name="magazine">MAGAZINE</string>
    <string name="recipe">RECIPE</string>
    <string name="bn_home">home</string>
    <string name="bn_map">map</string>
    <string name="bn_tips">tips</string>
    <string name="bn_mypage">my</string>
    <string name="user_level_1_seed">씨앗</string>
    <string name="user_level_2_cotyledon">떡잎</string>
    <string name="user_level_3_sprout">새싹</string>
    <string name="user_level_4_stem">줄기</string>
    <string name="user_level_5_leaf">잎사귀</string>
    <string name="user_level_6_tree">나무</string>
    <string name="user_level_7_flower">꽃</string>
    <string name="user_level_8_fruit">열매</string>
    <string-array name="user_levels_kr">
        <item>씨앗</item>
        <item>떡잎</item>
        <item>새싹</item>
        <item>줄기</item>
        <item>잎사귀</item>
        <item>나무</item>
        <item>꽃</item>
        <item>열매</item>
    </string-array>
    <string-array name="user_levels_eng">
        <item>SEED</item>
        <item>ROOT</item>
        <item>SPROUT</item>
        <item>STEM</item>
        <item>LEAF</item>
        <item>TREE</item>
        <item>FLOWER</item>
        <item>FRUIT</item>
    </string-array>
    <string name="btn_close">닫기</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_save">저장</string>
    <string name="btn_more">더보기</string>
    <string name="btn_sign_up">가입하기</string>
    <string name="btn_report">제보하기</string>
    <string name="btn_back">돌아가기</string>
    <string name="btn_write_review">등록하기</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_delete_account">계정 삭제</string>
    <string name="btn_error_refresh">새로고침</string>
    <string name="btn_error_quit">종료하기</string>
    <string name="btn_permission_re_request">권한재요청</string>
    <string name="btn_toast_scrap">스크랩 모아보기</string>
    <string name="btn_delete_all">전체 삭제</string>
    <string name="btn_map_restaurant_menu_more">메뉴 더보기</string>
    <string name="btn_map_restaurant_menu_close">메뉴 닫기</string>
    <string name="btn_review_recommend">추천해요! &#40;%d&#41;</string>
    <string name="btn_map_restaurant_review_more">리뷰 더보기</string>
    <string name="btn_map_report_edit_restaurant">수정 제보하기</string>
    <string name="btn_vegan_test_check_result">결과 확인하러 가기</string>
    <string name="btn_vegan_test_recommend_recipe">나를 위한 레시피 추천받기</string>
    <string name="btn_mypage_my_restaurant">식당 보러가기</string>
    <string name="btn_mypage_my_magazine">매거진 보러가기</string>
    <string name="btn_mypage_my_recipe">레시피 보러가기</string>
    <string name="permission_description">비긴, 비건 서비스의 원활한 이용을 위해\n이용 중에 권한 접근을 요청받으면 허용해 주세요.</string>
    <string name="permission_location">위치</string>
    <string name="permission_location_description">주변 식당 탐색 및 식당 검색 시 사용해요.</string>
    <string name="permission_camera">카메라</string>
    <string name="permission_camera_description">포토 리뷰 등록, 프로필 사진 등록 시 사용해요.</string>
    <string name="permission_storage">저장소</string>
    <string name="permission_storage_description">포토 리뷰 등록, 프로필 사진 등록 시 사용해요.</string>
    <string name="permission_notification">알림</string>
    <string name="permission_notification_description">앱 내 서비스 관련 PUSH알림 발송 시 사용해요.</string>
    <string name="permission_call">전화</string>
    <string name="permission_call_description">비건 식당으로의 전화 연결 시에 사용해요.</string>
    <string name="permission_re_request_title">권한 재요청 안내</string>
    <string name="permission_re_reguest_description">해당 권한을 거부할 경우, 다음 기능의 사용이 불가능해요.</string>
    <string name="permission_function_map_all">&#183; map 기능 전체</string>
    <string name="permission_function_map_img">&#183; map 리뷰 작성 시, 이미지 등록</string>
    <string name="permission_function_map_call">&#183; map 식당 전화 연결</string>
    <string name="permission_function_mypage_img">&#183; mypage 프로필 이미지 등록</string>
    <string name="permission_unusable_title">기능 사용 불가 안내</string>
    <string name="permission_unusable_description">%1$s에 대한 권한 사용을 거부하셨어요. 기능 사용을 원하실 경우 [휴대폰 설정 > 애플리케이션 관리자]에서 해당 앱의 권한을 허용해 주세요.</string>
    <string name="permission_unusable_location">위치 정보</string>
    <string name="permission_unusable_camera">카메라 사용</string>
    <string name="permission_unusable_storage">저장소 사용</string>
    <string name="permission_unusable_call">전화</string>
    <string name="permission_refuse_notification_title">광고성 정보 수신%1$s 처리 결과</string>
    <string name="permission_refuse_notification_content">수신%1$s 처리 완료</string>
    <string name="permission_refuse_notification_description">수신%1$s는 [mypage > 설정]에서 변경할 수 있어요.</string>
    <string name="permission_refuse_sender">전송자</string>
    <string name="permission_refuse_date">일시</string>
    <string name="permission_refuse_content">내용</string>
    <string name="placeholder_nickname">한/영 2~12자 &#40;특수문자, 공백 불가&#41;</string>
    <string name="helper_text_nickname_default">부적절한 닉네임은 관리자에 의해 변경될 수 있어요</string>
    <string name="helper_text_nickname_check">한/영 2~12자로 입력해 주세요 &#40;특수문자, 공백 불가&#41;</string>
    <string name="placeholder_map_search">지역, 메뉴명 입력</string>
    <string name="placeholder_map_report_restaurant_name">제보하려는 식당 이름을 입력해 주세요.</string>
    <string name="placeholder_map_report_restaurant_location">어디에 위치한 식당인가요?</string>
    <string name="placeholder_map_report_review_etc">기타 신고 사유를 입력해 주세요.</string>
    <string name="dialog_select_img_title">사진 선택</string>
    <string name="dialog_select_img_gallery">갤러리에서 선택</string>
    <string name="dialog_select_img_camera">카메라로 촬영</string>
    <string name="dialog_select_img_default">기본 이미지로 변경</string>
    <string name="dialog_report_review_description">제보 내용은 검토 후 조치할게요.</string>
    <string name="dialog_map_report_review_title">리뷰 신고하기</string>
    <string name="dialog_map_report_review_btn">신고하기</string>
    <string name="dialog_map_report_review_subtitle">신고 사유 선택</string>
    <string name="dialog_map_report_review_spam">스팸 홍보/도배</string>
    <string name="dialog_map_report_review_improper_img">관련없는 단어, 이미지 포함</string>
    <string name="dialog_map_report_review_expression">불쾌한 표현 (욕설, 차별적 표현 등)</string>
    <string name="dialog_map_report_review_etc">기타</string>
    <string name="mypage_setting">설정</string>
    <string name="mypage_setting_push">Push 알림 설정</string>
</resources>