<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        app:cardCornerRadius="@dimen/radius_8">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_radius_8">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/heading_bold"
                android:textColor="@color/color_text_01"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24" />

            <TextView
                android:id="@+id/tv_sender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_2_bold"
                android:textColor="@color/color_text_01"
                android:text="@string/permission_refuse_sender"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_24" />

            <TextView
                android:id="@+id/tv_sender_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_2_regular"
                android:textColor="@color/color_text_01"
                android:text="@string/app_name_kr"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_sender_title"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8" />

            <TextView
                android:id="@+id/tv_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_2_bold"
                android:textColor="@color/color_text_01"
                android:text="@string/permission_refuse_date"
                app:layout_constraintTop_toBottomOf="@id/tv_sender_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginStart="@dimen/margin_24" />

            <TextView
                android:id="@+id/tv_date_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_2_regular"
                android:textColor="@color/color_text_01"
                app:layout_constraintTop_toBottomOf="@id/tv_sender_content"
                app:layout_constraintStart_toEndOf="@id/tv_date_title"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4" />

            <TextView
                android:id="@+id/tv_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_2_bold"
                android:textColor="@color/color_text_01"
                android:text="@string/permission_refuse_content"
                app:layout_constraintTop_toBottomOf="@id/tv_date_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginStart="@dimen/margin_24" />

            <TextView
                android:id="@+id/tv_content_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_2_regular"
                android:textColor="@color/color_text_01"
                android:text="@string/permission_refuse_notification_content"
                app:layout_constraintTop_toBottomOf="@id/tv_date_content"
                app:layout_constraintStart_toEndOf="@id/tv_content_title"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4" />

            <TextView
                android:id="@+id/tv_sub_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/body_2_regular"
                android:textColor="@color/color_text_02"
                android:text="@string/permission_refuse_notification_description"
                app:layout_constraintTop_toBottomOf="@id/tv_content_title"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_20" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_1_bold"
                android:textColor="@color/color_primary"
                android:text="@string/btn_confirm"
                android:backgroundTint="@color/color_background"
                app:layout_constraintTop_toBottomOf="@id/tv_sub_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_36" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>