<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mypage.view.MypageSettingFragment">

    <Toolbar
        android:id="@+id/tb_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_transparent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/color_primary" />

        <TextView
            style="@style/title_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mypage_setting"
            android:textColor="@color/color_primary" />
    </Toolbar>

    <LinearLayout
        android:id="@+id/ll_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tb_setting">

        <TextView
            android:id="@+id/tv_push"
            style="@style/body_1_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_setting_push"
            android:textColor="@color/color_text_01" />

        <View
            android:layout_width="@dimen/item_0"
            android:layout_height="@dimen/item_0"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_push_switch"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:textOff=""
            android:textOn=""
            android:theme="@style/SwitchTheme"
            android:thumb="@drawable/selector_switch_push_thumb"
            app:switchMinWidth="46dp"
            app:track="@drawable/selector_switch_push_track" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_control_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_28"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_logout"
            style="@style/body_1_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            android:textColor="@color/color_text_02" />

        <TextView
            android:id="@+id/tv_delete_account"
            style="@style/body_1_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/btn_delete_account"
            android:textColor="@color/color_text_02" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>